# spotify-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LISTINGS.md  README.md  SECURITY.md  pyproject.toml  server.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
spotify_mcp/: __init__.py  auth.py  cli.py  config.py  server.py
spotify_mcp/power/: artist_explorer.py  deep_dive.py  find_song.py  insights.py  library_index.py  playlist_curator.py  playlist_generator.py  playlist_ops.py  playlist_sort.py  queue_builder.py  reports.py  smart_shuffle.py  vibe_engine.py
spotify_mcp/tools/: browse.py  discovery.py  follow.py  library.py  playback.py  playlists.py  search.py  shows.py  stats.py
spotify_mcp/utils/: errors.py  formatting.py  helpers.py  pagination.py  rate_limit.py  spotify_client.py  uri_parser.py
tests/: test_config.py  test_errors.py  test_formatting.py  test_helpers.py  test_tools.py  test_uri_parser.py
